# swagger-petstore-3-0-python-sdk

./: README.md  pyproject.toml  requirements.txt
doc/: client.md
doc/controllers/: pet.md  store.md  user.md
doc/models/: address.md  category.md  customer.md  order.md  pet-image.md  pet.md  tag.md  user.md
swaggerpetstoreopenapi30/: __init__.py  api_helper.py  configuration.py  swaggerpetstoreopenapi_30_client.py
swaggerpetstoreopenapi30/controllers/: base_controller.py  pet_controller.py  store_controller.py  user_controller.py
swaggerpetstoreopenapi30/exceptions/: api_exception.py
swaggerpetstoreopenapi30/http/: http_call_back.py  http_method_enum.py  http_request.py  http_response.py
swaggerpetstoreopenapi30/http/auth/: custom_header_authentication.py
swaggerpetstoreopenapi30/models/: __init__.py  address.py  category.py  customer.py  order.py  order_status_enum.py  pet.py  pet_image.py  pet_status_enum.py  status_enum.py  tag.py  user.py
swaggerpetstoreopenapi30/utilities/: file_wrapper.py
tests/: http_response_catcher.py
tests/controllers/: controller_test_base.py  test_pet_controller.py  test_store_controller.py  test_user_controller.py
